# NOMAD-CAMELS

./: .gitignore  .last  .zenodo.json  404.md  C--Users-od93yces-NOMAD_CAMELS_data-default_user-sadf-data_2024-01-25T13-54-39.800814+01-00.hdf5  CAMELS.lnk  CAMELS_start.bat  CAMELS_start.py.patch  CAMELS_start_withConsoleOutput.bat  CHAT_INTERFACE_README.md  CITATION.cff  CONTRIBUTING.md  EpicsFieldSignal.py.patch  Gemfile  LICENSE  MANIFEST.in  MainApp.py  MainApp.py.patch  MainApp_v2.py.patch  README.md  README_Install.txt  Temperature dependent current_simple_setup_guide.docx  TriggerEpicsSignalRO.py.patch  VISA_builder.py.patch  VISA_device_builder.py.patch  _config.yml  addDeviceDialog.py.patch  add_remove_table.py.patch  apidoc_for_camels_suitcase.py  builder_helper_functions.py.patch  button_move_scroll_area.py.patch  camels_installer.py.patch  change_device_config.py.patch  change_sequence.py.patch  changelog.md  channels_check_table.py.patch  console_redirect.py.patch  convert_png.py  custom_function_signal.py.patch  data_privacy.md  (+96 more)
.github/workflows/: ci.yml  ci_version_testing.yml  draft-pdf.yml  index.js  pages.yml  publish.yml  release_pages.yml
CAMELS/: CAMELS_start.py  MainApp.py  MainApp_v2.py  packages.txt
CAMELS/EPICS_handling/: make_ioc.py
CAMELS/bluesky_handling/: EpicsFieldSignal.py  evaluation_helper.py  helper_functions.py  make_catalog.py  protocol_builder.py
CAMELS/commands/: change_sequence.py
CAMELS/frontpanels/: device_add_dialog.py  device_installer.py  instrument_config.py  instrument_installer.py  manage_instruments.py  plot_definer.py  protocol_config.py  settings_window.py  taskSelector.py
CAMELS/gui/: addDeviceDialog.py  device_installer.py  enterTextDialog.py  fit_definer.py  for_loop.py  for_loop.ui  general_protocol_settings.py  general_protocol_settings.ui  gradient_descent_step.py  gradient_descent_step.ui  installer_window.py  installer_window.ui  instrument_config.py  instrument_config.ui  mainWindow.py  mainWindow.ui  mainWindow_v2.py  mainWindow_v2.ui  plot_definer.py  plot_definer.ui  plot_definer_2d.py  plot_definer_2d.ui  plot_options.py  plot_options.ui  protocol_view.py  protocol_view.ui  read_channels.py  set_channels.py  settings_window.py  settings_window.ui  ui_compile.bat
CAMELS/loop_steps/: change_device_config.py  for_while_loops.py  gradient_descent.py  if_step.py  make_step_of_type.py  nd_sweep.py  prompt_loop_step.py  read_channels.py  run_subprotocol.py  set_channels.py  set_value_popup.py  set_variables.py  simple_sweep.py  wait_loop_step.py
CAMELS/main_classes/: add_on.py  camels_installer.py  device_class.py  list_plot.py  loop_step.py  manual_control.py  measurement_channel.py  plot_2D.py  plot_widget.py  protocol_class.py
CAMELS/manual_controls/: get_manual_controls.py
CAMELS/tools/: VISA_builder.py  VISA_device_builder.py
CAMELS/ui_widgets/: add_remove_table.py  channels_check_table.py  console_redirect.py  drag_drop_tree_view.py  options_run_button.py  path_button_edit.py  variable_tool_tip_box.py  warn_popup.py
CAMELS/utility/: add_remove_table.py  databroker_export.py  device_handling.py  exception_hook.py  fit_variable_renaming.py  icon_button.py  load_save_functions.py  load_save_helper_functions.py  options_run_button.py  path_button_edit.py  plot_placement.py  qthreads.py  simpleeval.py  (+2 more)
EPICS_handling/: clean_up_ioc.cmd  create_ioc.cmd  make_ioc.py  readme.txt  run_ioc.cmd
_includes/: footer_custom.html  header_custom.html  nav_footer_custom.html  scroll_button.js
bluesky_handling/: EpicsFieldSignal.py  TriggerEpicsSignalRO.py  __init__.py  builder_helper_functions.py  custom_function_signal.py  daq_signal.py  evaluation_helper.py  helper_functions.py  make_catalog.py  protocol_builder.py  special_plan_stubs.py  standard_imports.py  visa_signal.py
dev_tools/: min_versions_from_toml.py  package_version_testing.py  req_min_3.10.txt  req_min_3.11.txt  req_min_3.12.txt  req_min_3.13.txt  req_min_3.9.txt  req_min_3_10.txt  req_min_3_11.txt  req_min_3_12.txt  req_min_3_13.txt  req_min_3_9.txt
devices/: Keysight_34401.py  Keysight_E5270B.py  PID_controller.py  __init__.py  daq_signal.py  keithley_220.py
docs/: Gemfile  _config.yml  about.md  camels_tutorial.md  changelog.md  index.html  index.md  installation.md  instrument_drivers.md  instruments.md  navigation.md  programmers_guide.md  pypi_upload.md  quick_start.md  users_guide.md
frontpanels/: device_add_dialog.py  plot_definer.py  settings_window.py  taskSelector.py
gui/: addDeviceDialog.py  addDeviceDialog.ui  createTask.py  createTask.ui  enterTextDialog.py  fit_definer.py  for_loop.py  for_loop.ui  general_protocol_settings.py  general_protocol_settings.ui  installer_window.py  installer_window.ui  mainWindow.py  mainWindow.ui  pass_ask.py  plot_definer.py  plot_definer_2d.ui  plot_options.py  read_channels.py  read_channels.ui  set_channels.py  settings_window.py  settings_window.ui  taskSelector.py  taskSelector.ui  ui_compile.bat
instruments/: driver_list.txt
loop_steps/: change_device_config.py  for_while_loops.py  gradient_descent.py  if_step.py  make_step_of_type.py  nd_sweep.py  prompt_loop_step.py  read_channels.py  run_subprotocol.py  set_channels.py  set_variables.py  simple_sweep.py  wait_loop_step.py
main_classes/: add_on.py  device_class.py  general_plot.py  list_plot.py  loop_step.py  measurement_channel.py  plot_2D.py  plot_widget.py  protocol_class.py
nomad_camels/: .coverage  CAMELS_start.py  MainApp.py  MainApp_v2.py  __init__.py  __main__.py  packages.txt  test.ipynb  test.py
nomad_camels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: VISA_builder.py  VISA_builder.ui  VISA_device_builder.py
utility/: add_remove_table.py  bluesky_handling.py  channels_check_table.py  console_redirect.py  databroker_export.py  device_handling.py  drag_drop_tree_view.py  exception_hook.py  load_save_functions.py  load_save_helper_functions.py  number_formatting.py  path_button_edit.py  qthreads.py  tqdm_progress_bar.py  treeView_functions.py  variable_tool_tip_box.py  variables_handling.py
(+794 files in other folders)
