[project]
name = "nomad_camels"
version = "1.6.1"
description = "CAMELS is a configurable measurement software, targeted towards the requirements of experimental solid-state physics."
authors = [
    {name = "FAIRmat - HU Berlin",email = "nomad-camels@fau.de"}
]
readme = "README.md"
requires-python = ">=3.9,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
]
dependencies = [
    "pyside6 (>=6.7.0)",
    "numpy (>=1.22.4)",
    "bluesky (>=1.8.3)",
    "ophyd (>=1.6.4)",
    "lmfit (>=1.0.3)",
    "pyyaml (>=6.0)",
    "requests (>=2.28.0)",
    "suitcase-nomad-camels-hdf5 (>=0.4.4)",
    "databroker (>=1.2.5)",
    "setuptools (>=57.0.0)",
    "matplotlib (>=3.5.2)",
    "pyqtgraph (>=0.13.1)"
]


[project.optional-dependencies]
api = ["fastapi (>=0.111.0)", "uvicorn (>=0.30.1)", "httpx (>=0.28.1,<0.29.0)"]
dev = ["pytest (>=8.3.4,<9.0.0)", "pytest-qt (>=4.4.0,<5.0.0)", "pytest-order (>=1.3.0,<2.0.0)", "pytest-mock (>=3.14.0,<4.0.0)", "pytest-timeout (>=2.3.1,<3.0.0)", "pyvisa (>=1.14.1,<2.0.0)"]
material = ["qt-material (>=2.12)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"GitHub Page" = "https://github.com/FAU-LAP/NOMAD-CAMELS"
"Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS/"

[project.gui-scripts]
nomad-camels = "nomad_camels:start_camels"
