[project]
name = "nomad_camels"
version = "1.8.5"
description = "CAMELS is a configurable measurement software, targeted towards the requirements of experimental solid-state physics."
authors = [
    {name = "FAIRmat - HU Berlin",email = "nomad-camels@fau.de"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
]

[tool.poetry.dependencies]
# == Core/required dependencies (installed by default) ==
pyside6 = ">=6.6.0"
bluesky = ">=1.9.0"
ophyd = ">=1.6.4"
lmfit = ">=1.0.2"
suitcase-nomad-camels-hdf5 = ">=0.6.3"
databroker = ">=1.2.5"
matplotlib = ">=3.6.2"
pyqtgraph = ">=0.13.3"
requests = ">=2.26.0"


# == With Python-specific constraints ==
pyyaml = [
    {version = ">=6.0", python = ">=3.10,<3.12"},
    {version = ">=6.0.1", python = ">=3.12"},
    {version = ">=3.10", python = ">=3.9,<3.10"}
]
pyzmq = [
    {version = ">=26.2.0", python = ">=3.10,<3.12"},
    {version = ">=26.2.0", python = ">=3.12"},
    {version = ">=22.1.0", python = ">=3.9,<3.10"}

]
setuptools = [
    {version = ">=54.2.0", python = ">=3.10,<3.12"},
    {version = ">=66.1.0", python = ">=3.12"},
    {version = ">=36.0.1", python = ">=3.9,<3.10"}
]
numpy = [
    {version = ">=1.23.0", python = ">=3.10,<3.12"},
    {version = ">=1.26.0", python = ">=3.12"},
    {version = ">=1.22.0,<2.1.0", python = ">=3.9,<3.10"}
]


# == Optional dependencies (mark with `optional = true`) ==
fastapi = { version = ">=0.110.1", optional = true }
httpx   = [
    { version = ">=0.28.1", python = ">=3.10", optional = true },
    { version = ">=0.21.0", python = ">=3.9,<3.10", optional = true }
]
uvicorn = [
  { version = ">=0.19.0,<0.22.0", python = ">=3.9,<3.12", optional = true },
  { version = ">=0.22.0",         python = ">=3.12",      optional = true }
]

pytest       = [
    { version = ">=7.3.2", python = ">=3.10", optional = true },
    { version = ">=7.0.0", python = ">=3.9,<3.10", optional = true }
]
pytest-qt    = { version = ">=4.2.0",  optional = true }
pytest-order = { version = ">=0.7.1",  optional = true }
pytest-mock  = { version = ">=0.4.0",  optional = true }
pytest-timeout = { version = ">=1.3.1", optional = true }
pytest-cov   = { version = ">=6.0.0",  optional = true }
pytest-xvfb  = { version = ">=3.0.0",  optional = true, markers = "sys_platform == 'linux'"}

qt-material = { version = ">=2.12",   optional = true }

pyvisa      = { version = ">=1.12.0",  optional = true }
pyvisa-py   = { version = ">=0.5.3",    optional = true }
pyusb       = { version = ">=1.2.0", optional = true }
pyserial    = { version = ">=3.0", optional = true }
psutil      = { version = ">=6.0.0", optional = true }
zeroconf    = { version = ">=0.70.0", optional = true }


dash = { version = ">=2.6.0", optional = true }

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "httpx"]
dev = ["pytest", "pytest-qt", "pytest-order", "pytest-mock", "pytest-timeout", "pytest-cov", "pytest-xvfb"]
material = ["qt-material"]
visa = ["pyvisa", "pyvisa-py", "pyusb", "pyserial", "psutil", "zeroconf"]
dash = ["dash"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"GitHub Page" = "https://github.com/FAU-LAP/NOMAD-CAMELS"
"Documentation" = "https://fau-lap.github.io/NOMAD-CAMELS/"

[project.gui-scripts]
nomad-camels = "nomad_camels:start_camels"
